Fix button spacing and added padding

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -23,6 +23,8 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  margin: 8px;
+  padding: 10px;
 }
 
 input {
